# ml_runner

./: .gitignore  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
ml_runner/conf/: fit.yaml  validate.yaml
ml_runner/conf/dataset/: cifar100.yaml
ml_runner/conf/metrics/: accuracy.yaml
ml_runner/conf/model/: resnet18.yaml
ml_runner/conf/optimizer/: adam.yaml  sgd.yaml
ml_runner/conf/scheduler/: cosine.yaml
ml_runner/entrypoint/: fit.py
ml_runner/module/: generic.py
ml_training/: main.py
ml_training/conf/: fit.yaml  validate.yaml
ml_training/conf/dataset/: cifar10.yaml  cifar100.yaml
ml_training/conf/metrics/: precision.yaml
ml_training/conf/model/: resnet18.yaml  resnet50.yaml
ml_training/entrypoint/: fit.py  validate.py
ml_training/module/: generic.py
