[tool.poetry]
name = "ml_training"
version = "0.1.0"
description = ""
authors = ["Ben Wallace <bencwallace@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "^2.0.7"
hydra-core = "^1.3.2"
torchvision = "^0.15.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
