[tool.poetry]
name = "ml_training"
version = "0.1.0"
description = ""
authors = ["Ben Wallace <bencwallace@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "^2.0.7"
hydra-core = "^1.3.2"
torch = {version = "^2.0.1+cu117", source = "pytorch-cu117"}
torchvision = {version = "^0.15.2+cu117", source = "pytorch-cu117"}

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
flake8 = "^4.0.1"

[tool.poetry.scripts]
ml_fit = "ml_training.main:fit"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
priority = "primary"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
