[tool.poetry]
name = "ml_runner"
version = "0.1.0"
description = ""
authors = ["Ben Wallace <bencwallace@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "^2.0.7"
hydra-core = "^1.3.2"
torch = {version = "^2.0.1+cu117", source = "pytorch-cu117"}
torchvision = {version = "^0.15.2+cu117", source = "pytorch-cu117"}

[tool.poetry.scripts]
ml_run = "ml_runner.main:main"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
black = "^23.7.0"
pytest = "^6.2.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
